fix the way to post data in swgger
