# docs/swagger.yaml
@@ -14,6 +14,23 @@ definitions:
     - email
     - password
     type: object
+  controllers.RegisterRequest:
+    properties:
+      email:
+        type: string
+      location:
+        type: string
+      password:
+        type: string
+      role:
+        type: string
+      username:
+        type: string
+    required:
+    - email
+    - password
+    - username
+    type: object
   controllers.SuccessResponse:
     properties:
       status:
@@ -400,7 +417,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/models.Users'
+          $ref: '#/definitions/controllers.RegisterRequest'
       produces:
       - application/json
       responses:
